# 10mm-parts-service

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  libraries  package-lock.json  package.json  pyproject.toml  ruff.toml  run_docker.sh  run_minio.sh
.agent/workflows/: accept-work.md
data/: test-data.db.bak
docs/: ARCHITECTURE.md
planning/: BOARD.md
planning/epics/: prd.md
planning/epics/EPIC-001 parts and vehicles/: design.md  implementation.md  standards.md  stories.md  testing.md
planning/epics/EPIC-002 photographs/: design.md  implementation.md  standards.md  stories.md  testing.md
planning/epics/EPIC-003 shared data/: stories.md
scripts/: seed.py
src/backend/: conftest.py  main.py
src/backend/core/: s3.py  security.py
src/backend/db/: session.py
src/backend/parts/core/: logic.py
src/backend/parts/db/: models.py
src/backend/parts/schemas/: location.py  part.py  search.py  stock.py  vehicle.py
src/backend/tests/integration/: test_performance.py  test_security.py
src/frontend/: .eslintignore  .eslintrc.json  base-theme.css  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
src/frontend/e2e/parts/: update.spec.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: Navbar.tsx  PhotoLightbox.tsx  PhotoManagerModal.tsx  RapidFireCameraModal.tsx
src/frontend/src/pages/: LocationsPage.tsx  PartDetailsPage.tsx  PartsPage.tsx  VehiclesPage.tsx
src/frontend/tests/: App.test.tsx  Navbar.test.tsx
(+23 files in other folders)
